[project]
name = "spatial-transformer-network"
version = "0.1.2a"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "huggingface-hub>=0.25.0",
    "requests>=2.32.0",
    "safetensors>=0.6.2",
    "surya-ocr>=0.6.0",
    "torch>=2.8.0",
    "torchvision>=0.19.0",
    "transformers>=4.56.0",
    "tqdm>=4.66.0",
    "matplotlib>=3.10.7",
]

[tool.uv]
dev-dependencies = [
    "editdistance>=0.8.1",
    "pytest>=7.4.0",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
